🩹 Fix: tag was slightly off center [#15]

--- a/assets/stylesheets/blog/tag.scss
+++ b/assets/stylesheets/blog/tag.scss
@@ -2,7 +2,7 @@
 
 li {
 	display: inline-block;
-	margin-right: 6px;
+	margin: 0 4px;
 	margin-bottom: 4px;
 	background-color: #1f1f1f;
 	border-radius: 3px;
